// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with muliple expense 1`] = `
<div
  className="page-summary"
>
  <div
    className="container"
  >
    <div
      className="page-summary__details"
    >
      <div>
        Viewing 
        <span>
           
          4
           
        </span>
         of
         
        <span>
           
          5
           
        </span>
         
        expenses
        .
      </div>
      <div>
        Total : 
        <span>
           ₹
          5500
        </span>
      </div>
    </div>
    <div
      className="page-summary__actions"
    >
      <Link
        className="btn"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`should render ExpenseList with one expense 1`] = `
<div
  className="page-summary"
>
  <div
    className="container"
  >
    <div
      className="page-summary__details"
    >
      <div>
        Viewing 
        <span>
           
          1
           
        </span>
         of
         
        <span>
           
          1
           
        </span>
         
        expense
        .
      </div>
      <div>
        Total : 
        <span>
           ₹
          500
        </span>
      </div>
    </div>
    <div
      className="page-summary__actions"
    >
      <Link
        className="btn"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
